src/snapshots/pandalang__eval__tests__evals@negative.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/int/negative.panda
---
Int(
    Int {
        n: -37,
    },
)
