src/snapshots/pandalang__eval__tests__evals@nested.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/fun/nested.panda
---
Expr(
    Fun {
        arg: "x",
        body: Expr(
            Fun {
                arg: "y",
                body: Expr(
                    BinOp {
                        left: Expr(
                            Var {
                                name: "x",
                            },
                        ),
                        right: Expr(
                            Var {
                                name: "y",
                            },
                        ),
                        kind: Add,
                    },
                ),
            },
        ),
    },
)
