src/snapshots/pandalang__eval__tests__evals@parens1.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/parens/parens1.panda
---
Int(
    Int {
        n: 0,
    },
)
