src/snapshots/pandalang__eval__tests__evals@parens2.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/parens/parens2.panda
---
Expr(
    Int {
        n: 9,
    },
)
