src/snapshots/pandalang__eval__tests__evals@parens3.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/parens/parens3.panda
---
Int(
    Int {
        n: 15,
    },
)
