src/snapshots/pandalang__eval__tests__evals@parens4.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/parens/parens4.panda
---
Int(
    Int {
        n: 34,
    },
)
