src/snapshots/pandalang__eval__tests__evals@parens5.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/parens/parens5.panda
---
Expr(
    Int {
        n: 0,
    },
)
