src/snapshots/pandalang__eval__tests__evals@prec2.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/bin_op/prec2.panda
---
Expr(
    Int {
        n: 5,
    },
)
